# apex-sc-dafx

./: .gitignore  APEX.quark  CMakeLists.txt  DAFx15.scd  README.md  README.rtf  README.txt
APEX_Client/: basicsetup.sc  coordspace.sc  csvnumarrayloader.sc  lineshape.sc  matrix2x2.sc  pathshape.sc  segment.sc  shape.sc  surfaceview.sc  synthesizer.sc  synthesizersetup.sc  vector2d.sc  vector2dinput.sc  voicesources.sc  vtsetup.sc
UGenSourceCode/: CMakeLists.txt  tool.h  vocaltract.h  vtparam.h
UGenSourceCode/classes/: KLVocalTract.sc  VocalTractArea.sc
UGens/: KLVocalTract.scx  VocaltractArea.scx
classes/APEX_Client/: lineshape.sc  matrix2x2.sc  path.sc  surface.sc  surfaceview.sc
data/: .~lock.test_assoc_array.csv#  basicsetup.csv  doremi_DAFX.csv  larynx.csv  mouth_floor.csv  planes.csv  synthesizersetup.csv  tongue_blade_under.csv  tongue_n.csv  vtsetup.csv
data/ PossiblyNotNeeded/: demo.csv  doremi.csv  vowels.csv
data/ PossiblyNotNeeded/calculations_etc/: alpha_beta.xls  empty.csv  larynx_area.xls  larynx_old.csv  larynx_translate.ods  planes_test.csv  posterior_wall_test.csv  tongue_apex.csv  (+3 more)
klvocaltract/: .appveyor.yml  .travis.yml  CMakeLists.txt  KLVocalTract_scsynth.scx  KLVocalTract_supernova.scx  README.md  VocalTractArea_scsynth.scx  VocalTractArea_supernova.scx  regenerate
src/: Readme_CompilationNotes.rtf  floatarray.h  segmentarray.h
src/apex_gui/: apex2gui.sc  arraytools.sc  bufferloader.sc  controller.sc  coordspace.sc  csvnumarrayloader.sc  pathshape.sc  playback.sc  segment.sc  shape.sc  source01.scd  vector2d.sc  vector2dinput.sc
(+33 files in other folders)
